# PoopOk

./: README.md  manage.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 03fbcaf17170_add_new_table_and_row.py  6017fe0ccc79_add_verify.py  7b880190ad0d_add_smt_table.py  7e77441e1bb6_init.py  bf51185f4294_initial_migration.py  ca407b87304f_post.py  dc087074e871_add_is_admin_field_to_users.py  ee24001ff8d4_some_line.py
backend/scr/conf/: config.py
backend/scr/database/: db.py
backend/scr/entity/: models.py  posts_comments.py
backend/scr/repository/: posts_comments.py  users.py
backend/scr/routes/: auth.py  posts_comments.py  users.py
backend/scr/schemas/: posts_coments.py  user.py
backend/scr/services/: auth.py  email.py
backend/src/conf/: config.py
backend/src/database/: db.py
backend/src/entity/: models.py
backend/src/i18n/: i18n_repository.py  i18n_schema.py  i18n_service.py  translations.py
backend/src/i18n/languages/: en.json  (+1 more)
backend/src/repository/: posts_comments.py  status_game.py  toilet_session.py  toilet_session_king.py  users.py
backend/src/routes/: achievement.py  armor.py  attacks.py  auth.py  curse.py  i18n.py  posts_comments.py  toilet_session.py  users.py
backend/src/schemas/: attacks.py  posts_coments.py  schemas_yeti.py  toilet_session_time.py  user.py
backend/src/services/: achievement_system.py  armor_system.py  auth.py  cloud_service.py  email.py  status_yeti.py  toilet_sessions.py  yeti_removal_system.py
backend/src/utils/: toilet_session_utils.py
(+156 files in other folders)
